--- a/TVMaxPolla/TVMaxPolla/platforms/android/res/values/strings.xml
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">TVMaxPolla</string>
+    <string name="app_name">TVMax Deportes</string>
 </resources>
