--- a/FutbolBrasil/app/platforms/android/com.phonegap.plugins.facebookconnect/FacebookLib/res/values-es/strings.xml
+++ b/FutbolBrasil/app/platforms/android/com.phonegap.plugins.facebookconnect/FacebookLib/res/values-es/strings.xml
@@ -41,4 +41,5 @@
     <string name="com_facebook_requesterror_password_changed">Su contraseña de Facebook ha cambiado, por favor vuelva a conectar la aplicación con Facebook.</string>
     <string name="com_facebook_requesterror_reconnect">Se produjo un error al conectar con Facebook, por favor vuelva a conectar la aplicación con Facebook.</string>
     <string name="com_facebook_requesterror_permissions">Una conexión de aplicación con Facebook falló debido a permisos insuficientes, por favor, conceda los permisos de aplicaciones para realizar la operación.</string>
+    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
 </resources>
