--- a/FutbolBrasil/app/platforms/android/com.phonegap.plugins.facebookconnect/FacebookLib/res/values-he/strings.xml
+++ b/FutbolBrasil/app/platforms/android/com.phonegap.plugins.facebookconnect/FacebookLib/res/values-he/strings.xml
@@ -41,4 +41,5 @@
     <string name="com_facebook_requesterror_reconnect">.ארעה שגיאה בעת החיבור עם פייסבוק, חבר בבקשה מחדש את האפליקציה עם פייסבוק</string>
     <string name="com_facebook_requesterror_permissions">.חיבור האפליקציה עם פייסבוק נכשל בשל הרשאות לא מספקות, אנא הענק הרשאות לאפליקציה בכדי שהפעולה תוכל להתבצע</string>
     <string name="com_facebook_dialogloginactivity_ok_button">אישור</string>
+    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
 </resources>
