FUTBOL BRASIL:  - Agregado archivo de paleta de colores - Cambios en News y Standings

--- a/FutbolBrasil/futbol-brasil/app/translations/locale-pt.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-pt.json
@@ -4,7 +4,7 @@
             "NOTISTATS" : "Notistats",
             "MATCHES": "Partidas",
             "STANDINGS": "Tabela",
-            "NEWS": "Noticias",
+            "NEWS": "Notícias",
             "SCORERS": "Artilharia",
             "LIVE": "Ao Minuto"
         },
