--- a/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
@@ -17,6 +17,32 @@
         },
         "SETTINGS": "Settings"
     },
+    "NEWS" : {
+        "TITLE" : "Notícias"
+
+    },
+    "MATCH" : {
+        "STATUS" : {
+            "0" : "Not Yet Played",
+            "1" : "First Half",
+            "2" : "Final",
+            "3" : "Suspended",
+            "4" : "Postponed",
+            "5" : "Half Time",
+            "6" : "Second Half",
+            "7" : "Full Time",
+            "8" : "Overtime 1",
+            "9" : "End of Overtime 1",
+            "10" : "Overtime 2",
+            "11" : "End of Overtime 2",
+            "12" : "Penalty Shootouts"
+        }
+    },
+    "PALPITES" : {
+    },
+    "EMPTY_STATES" : {
+        "LIVE" : "There are no games for today"
+    },
     "SETTINGS": {
         "PUSH_TITLE": "Push Notifications",
         "FAVORITE_TEAMS_TITLE": "My Favorite Teams",
@@ -35,9 +61,6 @@
         "NOT_AVAILABLE": "Not Available",
         "LANGUAGE_SEARCH_HELPER" : "Find your language",
         "TEAM_SEARCH_HELPER" : "Find your team"
-    },
-    "EMPTY_STATES" : {
-        "LIVE" : "There are no games for today"
     },
     "LANGUAGE" : {
         "PT" : "Portuguese",
