FUTBOL BRASIL:  - Lenguage de aplicación seteado al iniciar según preferencias de usuario - Vista de estado vacío provisional para News - Agregado idioma Español

--- a/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
@@ -47,7 +47,8 @@
         "MY_POINTS" : "My Points"
     },
     "EMPTY_STATES" : {
-        "LIVE" : "There are no games for today"
+        "LIVE" : "There are no games for today",
+        "NEWS" : "There are no news available"
     },
     "SETTINGS": {
         "PUSH_TITLE": "Push Notifications",
