FUTBOL BRASIL:  - Toggle de Favoritos dinámico - Vista de estado vacío para Puntos y Friends

--- a/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
@@ -48,7 +48,8 @@
     },
     "EMPTY_STATES" : {
         "LIVE" : "There are no games for today",
-        "NEWS" : "There are no news available"
+        "NEWS" : "There are no news available",
+        "POINTS" : "You don't have points info available"
     },
     "SETTINGS": {
         "PUSH_TITLE": "Push Notifications",
