--- a/FutbolBrasil/futbol-brasil/app/translations/locale-pt.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-pt.json
@@ -21,6 +21,11 @@
         "TITLE" : "Notícias"
 
     },
+    "SCORERS" : {
+        "PLAYER_NAME_LABEL" : "Nome do jogador",
+        "TEAM_LABEL" : "Equipe",
+        "GOALS_LABEL" : "Goles"
+    },
     "MATCH" : {
         "STATUS" : {
             "0" : "Sem Jogar",
@@ -76,5 +81,6 @@
         "EN" : "Inglês",
         "ES" : "Espanhol"
     },
-    "LOADING" : "A Carregar"
+    "LOADING" : "A Carregar",
+    "NOT_AVAILABLE": "Não Disponível"
 }
