FUTBOL BRASIL:  - Fix de Botón de Favoritos - Pantalla de Login ya está en su propia sección

--- a/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
@@ -15,7 +15,8 @@
             "FRIENDS" : "Friends",
             "POINTS" : "Points"
         },
-        "SETTINGS": "Settings"
+        "SETTINGS": "Settings",
+        "LOGIN" : "Login"
     },
     "NEWS" : {
         "TITLE" : "Notícias"
