--- a/FutbolBrasil/futbol-brasil/app/translations/locale-pt.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-pt.json
@@ -15,7 +15,8 @@
             "FRIENDS" : "Amigos",
             "POINTS" : "Pontos"
         },
-        "SETTINGS": "Definições"
+        "SETTINGS": "Definições",
+        "LOGIN" : "Login"
     },
     "NEWS" : {
         "TITLE" : "Notícias"
