FUTBOL BRASIL:  - Fix de botón de Atrás - Avances en Update System - Fix de Orden de Leyenda de Standings

--- a/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
@@ -50,7 +50,8 @@
         "PLAYER" : "Player",
         "POINTS" : "Points",
         "HITS" : "Hits",
-        "MY_POINTS" : "My Points"
+        "MY_POINTS" : "My Points",
+        "SCORE" : "Score"
     },
     "EMPTY_STATES" : {
         "LIVE" : "There are no games for today",
