--- a/FutbolBrasil/futbol-brasil/app/translations/locale-pt.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-pt.json
@@ -51,7 +51,7 @@
         "POINTS" : "Pontos",
         "HITS" : "Sucessos",
         "MY_POINTS" : "Os Meus Pontos",
-        "SCORE" : "Score"
+        "SCORE" : "Pontos"
     },
     "EMPTY_STATES" : {
         "LIVE" : "Não há jogos para hoje",
