FUTBOL BRASIL:  - Terminada funcionalidad de Nickname

--- a/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
@@ -59,6 +59,8 @@
         "POINTS" : "You don't have points info available"
     },
     "SETTINGS": {
+        "NICKNAME_TITLE": "Nickname",
+        "NICKNAME_PLACEHOLDER": "Choose your Nickname",
         "PUSH_TITLE": "Push Notifications",
         "FAVORITE_TEAMS_TITLE": "My Favorite Teams",
         "LANGUAGES_TITLE": "Languages",
