FUTBOL BRASIL:  - Completado rediseño de Login - Completado Guest Mode - Fix de Renderizado de Cliente en Leaderboards - Fixes de Navegación en Settings

--- a/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
@@ -16,7 +16,10 @@
             "POINTS" : "Points"
         },
         "SETTINGS": "Settings",
-        "LOGIN" : "Login"
+        "LOGIN" : "Login",
+        "REMIND" : "Remind / Get Credentials",
+        "LANGUAGE-SELECTION" : "Language Selection",
+        "TEAM-SELECTION" : "Language Selection"
     },
     "NEWS" : {
         "TITLE" : "Notícias"
