--- a/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
@@ -65,6 +65,26 @@
         "TEAMS" : "Could not get Teams",
         "LANGUAGES" : "Could not get Available Languages"
     },
+    "LOGIN" : {
+        "PASSWORD_LABEL" : "Password",
+        "PASSWORD_HELPER" : "Type in the code you received via SMS.",
+        "MSISDN_HOLDER" : "# Number",
+        "MSISDN_LABEL" : "Username",
+        "LOGIN_LABEL" : "Login",
+        "REMIND_LABEL" : "Remind / Get Credentials",
+        "CHANGE_LANGUAGE_LABEL" : "Change Language",
+        "TUTORIAL_LABEL" : "How Does It Work?",
+        "TERMS_LABEL" : "Terms & Conditions",
+        "ENTER_AS_GUEST_LABEL" : "Enter as Guest",
+        "REMIND" : {
+            "LABEL" : "Enter your mobile number",
+            "HERO" : {
+                "TITLE" : "Forgot your Username and password?",
+                "MESSAGE" : "To get your credentials please type your MOBILE NUMBER and press 'Remind / Get Credentials'",
+                "SMALL_PRINT" : "*The service is only available for suscribers of the specific operator"
+            }
+        }
+    },
     "SETTINGS": {
         "NICKNAME_TITLE": "Nickname",
         "NICKNAME_PLACEHOLDER": "Choose your Nickname",
