--- a/FutbolBrasil/futbol-brasil/app/translations/locale-es.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-es.json
@@ -65,6 +65,26 @@
         "TEAMS" : "No se pudieron obtener los equipos",
         "LANGUAGES" : "No se pudieron obtener los lenguajes disponibles"
     },
+    "LOGIN" : {
+        "PASSWORD_LABEL" : "Contraseña",
+        "PASSWORD_HELPER" : "Ingrese el código recibido por SMS.",
+        "MSISDN_HOLDER" : "# Numero",
+        "MSISDN_LABEL" : "Username",
+        "LOGIN_LABEL" : "Login",
+        "REMIND_LABEL" : "Recordar / Obtener Credenciales",
+        "CHANGE_LANGUAGE_LABEL" : "Cambiar Idioma",
+        "TUTORIAL_LABEL" : "¿Como funciona?",
+        "TERMS_LABEL" : "Términos y Condiciones",
+        "ENTER_AS_GUEST_LABEL" : "Entrar como Invitado",
+        "REMIND" : {
+            "LABEL" : "Introduzca su número de teléfono móvil",
+            "HERO" : {
+                "TITLE" : "¿Olvidó su Usuario y Contraseña?",
+                "MESSAGE" : "Para obtener sus credenciales por favor escriba su NÚMERO DE TELÉFONO y presione 'Recordar / Obtener Credenciales'",
+                "SMALL_PRINT" : "*El servicio está disponible solo para suscriptores de la operadora especificada"
+            }
+        }
+    },
     "SETTINGS": {
         "NICKNAME_TITLE": "Apodo",
         "NICKNAME_PLACEHOLDER": "Introduzca su Apodo",
