FUTBOL BRASIL:  - Mejorado manejo de secciones que no necesitan Autenticación - Cambio de un string en translation a EN

--- a/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
@@ -22,7 +22,7 @@
         "TEAM-SELECTION" : "Language Selection"
     },
     "NEWS" : {
-        "TITLE" : "Notícias"
+        "TITLE" : "News"
 
     },
     "SCORERS" : {
