--- a/FutbolBrasil/futbol-brasil/app/translations/locale-es.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-es.json
@@ -63,7 +63,12 @@
         "MATCH" : "No hay juegos programados para este día",
         "SCORERS" : "No hay goleadores para este torneo",
         "TEAMS" : "No se pudieron obtener los equipos",
-        "LANGUAGES" : "No se pudieron obtener los lenguajes disponibles"
+        "LANGUAGES" : "No se pudieron obtener los lenguajes disponibles",
+        "STANDINGS" : {
+            "NO_COMPETITIONS" : "No se pudieron obtener las Competiciones",
+            "NO_PHASES" : "No se pudieron obtener las Fases",
+            "NO_RANKINGS" : "No se pudieron obtener las Clasificaciones"
+        }
     },
     "LOGIN" : {
         "PASSWORD_LABEL" : "Contraseña",
