FUTBOL BRASIL:  - Manejo de Errores completo en Predictions y Leaderboard

--- a/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-en.json
@@ -60,6 +60,8 @@
         "LIVE" : "There are no games for today",
         "NEWS" : "There are no news available",
         "POINTS" : "You don't have points info available",
+        "LEADERBOARD" : "There is no info available for this leaderboard",
+        "PREDICTIONS" : "There is no info available for this tournament",
         "MATCH" : "There are no games for this day",
         "SCORERS" : "There are no strikers for this tournament",
         "TEAMS" : "Could not get Teams",
