--- a/FutbolBrasil/futbol-brasil/app/translations/locale-es.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-es.json
@@ -60,6 +60,8 @@
         "LIVE" : "No hay juegos programados para hoy",
         "NEWS" : "No hay noticias disponibles",
         "POINTS" : "Usted no tiene información de puntos disponible",
+        "LEADERBOARD" : "No hay información disponible para esta clasificación",
+        "PREDICTIONS" : "No hay información disponible para este torneo",
         "MATCH" : "No hay juegos programados para este día",
         "SCORERS" : "No hay goleadores para este torneo",
         "TEAMS" : "No se pudieron obtener los equipos",
