--- a/FutbolBrasil/futbol-brasil/app/translations/locale-es.json
+++ b/FutbolBrasil/futbol-brasil/app/translations/locale-es.json
@@ -118,6 +118,14 @@
         "EN" : "Inglés",
         "ES" : "Español"
     },
+    "APP" : {
+        "EXIT_APP_TITLE" : "Salir de la Aplicación",
+        "EXIT_APP_MSG" : "¿Está seguro que desea salir de la aplicación?"
+    },
+    "OK" : "Ok",
+    "CANCEL" : "Cancelar",
+    "PREVIOUS" : "Anterior",
+    "NEXT" : "Siguiente",
     "LOADING" : "Cargando",
     "NOT_AVAILABLE": "No Disponible"
 }
